Refactor json path handling into class
List of strings doesn't allow determining whether you're located in an
array or a map